feat: adding more contents and structure to page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 
         <title>Yiponline</title>
 
+        <!-- favicon -->
         <link rel="shortcut icon" href="/assets/yip-online.png" type="image/x-icon">
+
+        <!-- stylesheet -->
         <link rel="stylesheet" href="/styles/styles.css">
 
+        <!-- font awesome -->
+        <script src="https://kit.fontawesome.com/93158f92e8.js" crossorigin="anonymous"></script>
+
+        <!-- aos -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
         <!-- jquery -->
@@ -41,6 +48,134 @@
                 </div>
             </nav>
         </header>
+
+        <main>
+            <!-- hero section -->
+            <section>
+                <div class="hero">
+                    <h1>Innovative Solutions For Scaling Businesses.</h1>
+
+                    <div class="hero-img">
+                        <img src="/assets/customer-agreement.gif" alt="customer satisfaction" >
+                    </div>
+
+                    <div class="hero-info">
+                        <h3>DOES YOUR BUSINESS NEED TO GROW?</h3>
+                        <p>You're in luck, we have just what you need: simple, affordable and 
+                            quick-to-deploy technology, tools and apps for your SME and Large Enterprises!
+                        </p>
+                        <button><span class="hero-cta">Get Started <i class="fa-solid fa-arrow-right"></i></span></button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- who we are -->
+            <section>
+                <div class="whoWeAre">
+                    <p class="whoWeAre-info">Who we are</p>
+                    <p class="whoWeAre-header">We Yeepsters make running a business a breeze by developing smart technology 
+                        that simplifies tasks, streamlines operations, and boosts efficiency and profits.
+                    </p>
+                    <p class="whoWeAre-text">Yeep that's what we do! We'll take care of the technical side of things, 
+                        so you can focus on the fun part of running your business. 
+                        Let's work together to make your business soar!
+                    </p>
+
+                    <p class="whoWeAre-cta"><a>Find Out More <i class="fa-solid fa-arrow-right"></i></a></p>
+                </div>
+
+                <aside class="statements">
+                    <div class="statements-container">
+                        <div class="statement-img">
+                            <img src="/assets/mission.jpeg" alt="mission statement">
+                        </div>
+                        <div class="statement-body">
+                            <p>Mission</p>
+                            <span>Building accessible tech to Structure & Scale-up African Businesses!</span>
+                        </div>
+                    </div>
+
+                    <div class="statements-container">
+                        <div class="statement-img">
+                            <img src="/assets/vision.jpeg" alt="vision statement">
+                        </div>
+                        <div class="statement-body">
+                            <p>Vision</p>
+                            <span>Building a Friction-free Africa attractive for reverse migration</span>
+                        </div>
+                    </div>
+                </aside>
+            </section>
+
+            <!-- we can help -->
+            <section>
+                <div class="weCanHelp">
+                    <h2>Let's show you how we can use tech to grow your business</h2>
+                    <p>We focus on bringing value and leverage on technology to solve challenges that businesses face.</p>
+
+                    <button class="full-rounded">
+                        <span>Get Started Now</span>
+                        <div class="border full-rounded"></div>
+                    </button>
+                </div>
+            </section>
+
+            <!-- solutions provided -->
+            <section>
+                <div class="whatWeOffer">
+                    <p>What we offer</p>
+                    <div class="offer-items">
+                        <div class="offer-img"><img src="/assets/e-commerce.webp" alt="e-commerce"></div>
+
+                        <div class="offer-body">
+                            <p>E-commerce</p>
+                            <span>Have a physical store or an online business? we help you create a 
+                                stunning online store that attracts customers and boosts sales.
+                            </span>
+                        </div>
+                    </div>
+                    <div class="offer-items right">
+                        <div class="offer-img"><img src="/assets/hospitality.webp" alt="hospitality"></div>
+
+                        <div class="offer-body">
+                            <p>Hospitality</p>
+                            <span>Thinking luxury, cozy, or budget-friendly, we have it all.</span>
+                        </div>
+                    </div>
+                    <div class="offer-items">
+                        <div class="offer-img"><img src="/assets/SEO.webp" alt="SEO"></div>
+
+                        <div class="offer-body">
+                            <p>SEO Optimization</p>
+                            <span>We help you reach your target audience and grow your business by boosting 
+                                your online presence and rank higher on search engines with our SEO optimization.
+                            </span>
+                        </div>
+                    </div>
+                    <div class="offer-items right">
+                        <div class="offer-img"><img src="/assets/responsive-theme.jpeg" alt="responsive theme"></div>
+
+                        <div class="offer-body">
+                            <p>Responsive Themes</p>
+                            <span>Our themes are designed to adapt to different screen sizes and resolutions, 
+                                ensuring a smooth and consistent user experience. 
+                            </span>
+                        </div>
+                    </div>
+                    <div class="offer-items">
+                        <div class="offer-img"><img src="/assets/domain.webp" alt="custom domain"></div>
+
+                        <div class="offer-body">
+                            <p>Custom Domain</p>
+                            <span> 
+                                We help you create a unique and memorable identity for your website.
+                                Choose a domain name that reflects your brand and stands out from the crowd.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
 
         
