fix: fixing font size, layout and spacing

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                 </div>
 
                 <div class="hero-info">
-                    <h3>DOES YOUR BUSINESS NEED TO GROW?</h3>
-                    <p>You're in luck, we have just what you need: simple, affordable and 
+                    <p>We have just what you need: simple, affordable and 
                         quick-to-deploy technology, tools and apps for your SME and Large Enterprises!
                     </p>
                     <button><span class="hero-cta">Get Started <i class="fa-solid fa-arrow-right"></i></span></button>
